introduce two alternative implementation of IBatchCallScheduler for performance tuning